--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body{
     display:flex;
     gap:20px;
     overflow:hidden;
-    position:relative;
+    scroll-behavior:smooth;
 }
 
 .review-card{
@@ -223,9 +223,7 @@ footer{
 
 <div class="rules">
     <h3>🔐 STRICT RULES – KINDLY READ BEFORE PERFORMING TRANSACTIONS</h3>
-
     • Follow strict rules before buying USDT<br>
-
     <div class="section-gap">
     • 💰 Minimum purchase: $25<br>
     • 📊 New buyers limit: $200 per day<br>
@@ -233,7 +231,6 @@ footer{
     • 💱 For USDT price of the day, kindly check on this page<br>
     • 📦 Bulk order rates vary depending on volume
     </div>
-
     <div class="section-gap">
     • 📄 Required documents:<br>
       &nbsp;&nbsp;– Full Name (must match Binance verified identity)<br>
@@ -241,7 +238,6 @@ footer{
       &nbsp;&nbsp;– Email ID<br>
       &nbsp;&nbsp;– Contact Number
     </div>
-
     <div class="section-gap">
     • 🛡️ All transactions are 100% legitimate & properly documented for legal purposes<br>
     • ❌ No third-party payments allowed<br>
@@ -254,42 +250,9 @@ footer{
     </div>
 </div>
 
-<!-- REVIEWS -->
 <div class="reviews">
     <h3>Client Reviews</h3>
     <div class="review-grid" id="reviewContainer"></div>
-</div>
-
-<!-- REVIEW SUBMISSION -->
-<div class="review-submit">
-    <h3>Submit Your Review</h3>
-
-<iframe name="hidden_iframe" style="display:none;"></iframe>
-
-<form action="https://docs.google.com/forms/d/e/1FAIpQLSeyNJOVvEAL8A7NpHMqbL266wX8pDdfalWxqKduWpz6d63kPw/formResponse"
-      method="POST"
-      target="hidden_iframe"
-      onsubmit="showSuccess()">
-
-<input type="text"
-       name="entry.2128005786"
-       placeholder="Your Name"
-       required>
-
-<textarea name="entry.1098585507"
-          placeholder="Your Review"
-          required></textarea>
-
-<button type="submit">Submit Review</button>
-</form>
-
-<p id="successMsg" style="display:none;color:#00ff99;margin-top:10px;">
-Thank you. Your review has been submitted for approval.
-</p>
-
-<p style="font-size:12px;margin-top:10px;color:#aaa;">
-Reviews are moderated and will appear after approval.
-</p>
 </div>
 
 <div class="contact">
@@ -327,10 +290,9 @@ fetch('reviews.json')
     const container=document.getElementById("reviewContainer");
     container.innerHTML="";
 
-    const reviewsToShow = data.slice(0,6);
-    const loopReviews = [...reviewsToShow, ...reviewsToShow];
+    const duplicated = [...data, ...data];
 
-    loopReviews.forEach(review=>{
+    duplicated.forEach(review=>{
         const div=document.createElement("div");
         div.className="review-card";
         div.innerHTML=`
@@ -354,12 +316,7 @@ fetch('reviews.json')
     }
 
     autoScroll();
-})
-.catch(()=>console.log("No reviews found."));
-
-function showSuccess(){
-    document.getElementById("successMsg").style.display="block";
-}
+});
 </script>
 
 </body>
