--- a/index.html
+++ b/index.html
@@ -290,9 +290,8 @@ fetch('reviews.json')
     const container=document.getElementById("reviewContainer");
     container.innerHTML="";
 
-    const duplicated = [...data, ...data];
-
-    duplicated.forEach(review=>{
+    // Add all reviews
+    data.forEach(review=>{
         const div=document.createElement("div");
         div.className="review-card";
         div.innerHTML=`
@@ -302,21 +301,37 @@ fetch('reviews.json')
         container.appendChild(div);
     });
 
-    let scrollAmount = 0;
+    // Duplicate ALL reviews for infinite scroll
+    data.forEach(review=>{
+        const div=document.createElement("div");
+        div.className="review-card";
+        div.innerHTML=`
+            <div class="review-name">${review.name}</div>
+            <div class="review-text">${review.text}</div>
+        `;
+        container.appendChild(div);
+    });
+
+    let scrollPosition = 0;
 
     function autoScroll(){
-        scrollAmount += 0.5;
-        container.scrollLeft = scrollAmount;
+        scrollPosition += 0.4;   // speed (increase for faster)
+        container.scrollLeft = scrollPosition;
 
-        if(scrollAmount >= container.scrollWidth / 2){
-            scrollAmount = 0;
+        if(scrollPosition >= container.scrollWidth / 2){
+            scrollPosition = 0;
         }
 
         requestAnimationFrame(autoScroll);
     }
 
     autoScroll();
-});
+})
+.catch(err=>console.log("Review load error:", err));
+
+function showSuccess(){
+    document.getElementById("successMsg").style.display="block";
+}
 </script>
 
 </body>
