--- a/index.html
+++ b/index.html
@@ -214,19 +214,23 @@ footer{
 </div>
 
 <div class="rules">
-    <h3>🔐 STRICT RULES – KINDLY READ BEFORE PERFORMING TRANSACTIONS</h3>
-    • Minimum purchase: $25<br>
-    • New buyers limit: $200 per day<br>
-    • Higher cap opens for verified regular buyers<br>
-    • Bulk rates vary based on volume<br>
-    • Full Name (Binance verified), UID & Wallet required<br>
-    • Binance verified name & bank account must match<br>
-    • No third-party payments allowed<br>
-    • Funds must originate from buyer’s own account<br>
-    • After payment, send screenshot on WhatsApp<br>
-    • Assets released after verification<br>
-    • Fraudulent transactions will result in strict legal action<br>
-    • Service strictly for legitimate buyers only
+    <h3>🔐 APEX DIGITAL OFFICIAL | STRICT RULES - KINDLY READ
+
+• ⚠️ Follow strict rules before buying USDT
+• 💰 Minimum purchase: $25
+• 📊 New buyers limit: $200 per day
+• 👑 Higher cap (no limit) opens only for regular verified buyers
+• 💱 For USDT price of the day, kindly drop a text in this format: “Today’s USDT Price”
+• 📦 Bulk order rates vary depending on volume
+• 📄 Required documents: Full Name (must match Binance verified identity), Binance UID + wallet address, Gmail ID, Contact number
+• 🛡️ All transactions are 100% legitimate & properly documented for legal purposes
+• ❌ No third-party payments allowed
+• ✅ Binance verified name & bank account name must match
+• 💳 Funds sent must be legitimate from your own account
+• 📸 After payment, send screenshot on WhatsApp
+• 🚀 Once funds are received & verified, digital assets will be released
+• ⚖️ Any fraudulent, fake, or mismatched transaction will result in strict legal action
+• 🚫 This service is strictly for legitimate buyers only — fake inquiries, scammers, or anyone attempting fraud will face immediate legal action
 </div>
 
 <!-- REVIEWS -->
