--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ footer{
 • 💰 Minimum purchase: $25
 • 📊 New buyers limit: $200 per day
 • 👑 Higher cap (no limit) opens only for regular verified buyers
-• 💱 For USDT price of the day, kindly drop a text in this format: “Today’s USDT Price”
+• 💱 For USDT price of the day, kindly check on this page
 • 📦 Bulk order rates vary depending on volume
 • 📄 Required documents: Full Name (must match Binance verified identity), Binance UID + wallet address, Gmail ID, Contact number
 • 🛡️ All transactions are 100% legitimate & properly documented for legal purposes
