--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>APEX DIGITAL OFFICIALS | USDT OTC Desk</title>
+<title>APEX DIGITAL OFFICIALS | USDT Desk</title>
 
 <style>
 *{
@@ -214,23 +214,23 @@ footer{
 </div>
 
 <div class="rules">
-    <h3>🔐 APEX DIGITAL OFFICIAL | STRICT RULES - KINDLY READ
+    <h3>🔐 APEX DIGITAL OFFICIAL | STRICT RULES - KINDLY READ<br>
 
-• ⚠️ Follow strict rules before buying USDT
-• 💰 Minimum purchase: $25
-• 📊 New buyers limit: $200 per day
-• 👑 Higher cap (no limit) opens only for regular verified buyers
-• 💱 For USDT price of the day, kindly check on this page
-• 📦 Bulk order rates vary depending on volume
-• 📄 Required documents: Full Name (must match Binance verified identity), Binance UID + wallet address, Gmail ID, Contact number
-• 🛡️ All transactions are 100% legitimate & properly documented for legal purposes
-• ❌ No third-party payments allowed
-• ✅ Binance verified name & bank account name must match
-• 💳 Funds sent must be legitimate from your own account
-• 📸 After payment, send screenshot on WhatsApp
-• 🚀 Once funds are received & verified, digital assets will be released
-• ⚖️ Any fraudulent, fake, or mismatched transaction will result in strict legal action
-• 🚫 This service is strictly for legitimate buyers only — fake inquiries, scammers, or anyone attempting fraud will face immediate legal action
+• ⚠️ Follow strict rules before buying USDT<br>
+• 💰 Minimum purchase: $25<br>
+• 📊 New buyers limit: $200 per day<br>
+• 👑 Higher cap (no limit) opens only for regular verified buyers<br>
+• 💱 For USDT price of the day, kindly check on this page<br>
+• 📦 Bulk order rates vary depending on volume<br>
+• 📄 Required documents: Full Name (must match Binance verified identity), Binance UID + wallet address, Gmail ID, Contact number<br>
+• 🛡️ All transactions are 100% legitimate & properly documented for legal purposes<br>
+• ❌ No third-party payments allowed<br>
+• ✅ Binance verified name & bank account name must match<br>
+• 💳 Funds sent must be legitimate from your own account<br>
+• 📸 After payment, send screenshot on WhatsApp<br>
+• 🚀 Once funds are received & verified, digital assets will be released<br>
+• ⚖️ Any fraudulent, fake, or mismatched transaction will result in strict legal action<br>
+• 🚫 This service is strictly for legitimate buyers only — fake inquiries, scammers, or anyone attempting fraud will face immediate legal action<br>
 </div>
 
 <!-- REVIEWS -->
