--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@ body{
     font-size:14px;
     margin-bottom:60px;
 }
+    .rules p{
+    margin-bottom:10px;
+    color:#e0e0e0;
+    font-size:14px;
+}
 
 .rules h3{
     text-align:center;
@@ -214,23 +219,23 @@ footer{
 </div>
 
 <div class="rules">
-    <h3>🔐 APEX DIGITAL OFFICIAL | STRICT RULES - KINDLY READ<br>
+    <h3>🔐 APEX DIGITAL OFFICIAL | STRICT RULES - KINDLY READ</h3>
 
-• ⚠️ Follow strict rules before buying USDT<br>
-• 💰 Minimum purchase: $25<br>
-• 📊 New buyers limit: $200 per day<br>
-• 👑 Higher cap (no limit) opens only for regular verified buyers<br>
-• 💱 For USDT price of the day, kindly check on this page<br>
-• 📦 Bulk order rates vary depending on volume<br>
-• 📄 Required documents: Full Name (must match Binance verified identity), Binance UID + wallet address, Gmail ID, Contact number<br>
-• 🛡️ All transactions are 100% legitimate & properly documented for legal purposes<br>
-• ❌ No third-party payments allowed<br>
-• ✅ Binance verified name & bank account name must match<br>
-• 💳 Funds sent must be legitimate from your own account<br>
-• 📸 After payment, send screenshot on WhatsApp<br>
-• 🚀 Once funds are received & verified, digital assets will be released<br>
-• ⚖️ Any fraudulent, fake, or mismatched transaction will result in strict legal action<br>
-• 🚫 This service is strictly for legitimate buyers only — fake inquiries, scammers, or anyone attempting fraud will face immediate legal action<br>
+    <p>• ⚠️ Follow strict rules before buying USDT</p>
+    <p>• 💰 Minimum purchase: $25</p>
+    <p>• 📊 New buyers limit: $200 per day</p>
+    <p>• 👑 Higher cap (no limit) opens only for regular verified buyers</p>
+    <p>• 💱 For USDT price of the day, kindly check on this page</p>
+    <p>• 📦 Bulk order rates vary depending on volume</p>
+    <p>• 📄 Required documents: Full Name (must match Binance verified identity), Binance UID + wallet address, Gmail ID, Contact number</p>
+    <p>• 🛡️ All transactions are 100% legitimate & properly documented for legal purposes</p>
+    <p>• ❌ No third-party payments allowed</p>
+    <p>• ✅ Binance verified name & bank account name must match</p>
+    <p>• 💳 Funds sent must be legitimate from your own account</p>
+    <p>• 📸 After payment, send screenshot on WhatsApp</p>
+    <p>• 🚀 Once funds are received & verified, digital assets will be released</p>
+    <p>• ⚖️ Any fraudulent, fake, or mismatched transaction will result in strict legal action</p>
+    <p>• 🚫 This service is strictly for legitimate buyers only — fake inquiries, scammers, or anyone attempting fraud will face immediate legal action</p>
 </div>
 
 <!-- REVIEWS -->
